--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 <script src="scripts/controllers.js"></script>
 <script src="scripts/services.js"></script>
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/angular-resource/angular-resource.min.js"></script>
 <!-- endbuild -->
 
 </body>
